--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "BM3D_rs"
+name = "bm3d_rs"
 version = "0.1.0"
 edition = "2024"
+authors = ["Riccardo <riccioadami@gmail.com>"]
+repository = "https://github.com/riccio8/BM3D_rs"
+
 
 [dependencies]
 image = "0.25"
@@ -9,3 +12,4 @@ ndarray = "0.16.1"
 rayon = "1.11.0"
 rustdct = "0.7"
 palette = "0.7"
+yuv = "0.8.8"
